ovf/fixtures/external/OVFToolTemplates/OVF/xmltestfiles/Envelope/Pos/valid_iso.ovf
<?xml version="1.0" encoding="utf-8"?>
<ovf:Envelope xmlns:xsi-namespace="http://www.w3.org/2001/XMLSchema-instance" xmlns:ovf="http://www.vmware.com/schema/ovf/1/envelope" xmlns:vssd-namespace="http://schemas.dmtf.org/wbem/wscim/1/cim-schema/2/CIM_VirtualSystemSettingData" xmlns:rasd-namespace="http://schemas.dmtf.org/wbem/wscim/1/cim-schema/2/CIM_ResourceAllocationSettingData" ovf:version="0.9">
     <References>
	    <File ovf:id="file1" ovf:href="../../../vmdk/resource.iso" ovf:size="0"/> 
    </References>
    <Content xsi-namespace:type="ovf:VirtualSystem_Type" ovf:id="PTC01_VM">
     <Info/>
	<Section xsi-namespace:type="ovf:OperatingSystemSection_Type" ovf:id="36">
		<Info/>
	</Section>
	<Section xsi-namespace:type="ovf:VirtualHardwareSection_Type" ovf:required="true">
	   <Info/>
	      <System>
	         <vssd-namespace:InstanceId>0</vssd-namespace:InstanceId>
		 <vssd-namespace:VirtualSystemIdentifier>system id</vssd-namespace:VirtualSystemIdentifier>
		 <vssd-namespace:VirtualSystemType>foobar, vmx-04, xen3</vssd-namespace:VirtualSystemType>
	      </System>
	      <Item>
                <rasd-namespace:Caption>Some Resource 1</rasd-namespace:Caption>
                <rasd-namespace:Description />
                <rasd-namespace:InstanceId>6</rasd-namespace:InstanceId>
                <rasd-namespace:ResourceType>24</rasd-namespace:ResourceType>
                <rasd-namespace:HostResource>/file/file1</rasd-namespace:HostResource>
                <rasd-namespace:AddressOnParent>0</rasd-namespace:AddressOnParent>
            </Item>
	</Section>
    </Content>
</ovf:Envelope>
